k8-test/deployment.yaml
kind: Deployment
apiVersion: apps/v1
 
metadata:
  name: online-shop-deployment
  namespace: online-shop
  labels:
    app: online-shop

spec:
  replicas: 2
  selector:
    matchLabels:
      app: online-shop-app
  template:
    metadata:
      labels:
        app: online-shop-app
    spec:
      containers:
        - name: online-shop-cntnr
          image: jayvadadoriya/online-shop:latest
          ports:
            - containerPort: 80
