k8-test/service.yaml
kind: Service
apiVersion: v1

metadata:
  name: online-shop-svc
  namespace: online-shop

spec:
  selector:
    app: online-shop-app
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 80
